OBDS-61: changing WAR url to OPENBOXES-DSOBGM Bamboo build +minor packer template changes +removing redundant env java opts