@@ -22,7 +22,7 @@ sudo mysql -u root -e "GRANT ALL on openboxes.* to openboxes@localhost IDENTIFIE
 # Download OpenBoxes WAR
 sudo mkdir -p /opt/openboxes/.grails
 cd /opt/openboxes/
-sudo wget --no-verbose http://bamboo.pih-emr.org:8085/browse/OPENBOXES-SDOD2/latest/artifact/shared/Latest-WAR/openboxes.war
+sudo wget --no-verbose http://bamboo.pih-emr.org:8085/browse/OPENBOXES-DSOBGM/latest/artifact/shared/Latest-WAR/openboxes.war
 
 # Create Grails configuration file and move it to /opt/openboxes/.grails/
 cat <<-EOT > /tmp/openboxes.yml
@@ -54,8 +54,7 @@ SuccessExitStatus=143
 RestartSec=10
 Restart=always
 
-Environment="CATALINA_OPTS=-Xms1024m -Xmx1024m -XX:MaxPermSize=128m -server -XX:+UseParallelGC"
-Environment="JAVA_OPTS=-Djava.awt.headless=true -Djava.security.egd=file:/dev/./urandom"
+Environment="JAVA_TOOL_OPTIONS=-Xms1024m -Xmx1024m -XX:+UseParallelGC -Djava.awt.headless=true"
 
 [Install]
 WantedBy=multi-user.target
